--- a/main.html
+++ b/main.html
@@ -1,68 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Quiz</title>
+  <meta charset="UTF-8" />
 </head>
-
 <body>
 
-<h1>Quiz</h1>
+  <div id="questions"></div>
 
-<div id="questions">
-  <!-- Question 1 -->
-  <div>
-    <p>1. What is 2 + 2?</p>
-    <label><input type="radio" name="q1" value="2">2</label>
-    <label><input type="radio" name="q1" value="3">3</label>
-    <label><input type="radio" name="q1" value="4">4</label>
-    <label><input type="radio" name="q1" value="5">5</label>
-  </div>
+  <button id="submit">Submit</button>
 
-  <!-- Question 2 -->
-  <div>
-    <p>2. What is the capital of France?</p>
-    <label><input type="radio" name="q2" value="Paris">Paris</label>
-    <label><input type="radio" name="q2" value="London">London</label>
-    <label><input type="radio" name="q2" value="Rome">Rome</label>
-    <label><input type="radio" name="q2" value="Berlin">Berlin</label>
-  </div>
+  <div id="score"></div>
 
-  <!-- Question 3 -->
-  <div>
-    <p>3. What color is the sky?</p>
-    <label><input type="radio" name="q3" value="Red">Red</label>
-    <label><input type="radio" name="q3" value="Blue">Blue</label>
-    <label><input type="radio" name="q3" value="Green">Green</label>
-    <label><input type="radio" name="q3" value="Black">Black</label>
-  </div>
-
-  <!-- Question 4 -->
-  <div>
-    <p>4. Which is a fruit?</p>
-    <label><input type="radio" name="q4" value="Carrot">Carrot</label>
-    <label><input type="radio" name="q4" value="Apple">Apple</label>
-    <label><input type="radio" name="q4" value="Potato">Potato</label>
-    <label><input type="radio" name="q4" value="Broccoli">Broccoli</label>
-  </div>
-
-  <!-- Question 5 -->
-  <div>
-    <p>5. Which one is a programming language?</p>
-    <label><input type="radio" name="q5" value="HTML">HTML</label>
-    <label><input type="radio" name="q5" value="Python">Python</label>
-    <label><input type="radio" name="q5" value="CSS">CSS</label>
-    <label><input type="radio" name="q5" value="Excel">Excel</label>
-  </div>
-</div>
-
-<br>
-
-<button id="submit">Submit</button>
-
-<div id="score"></div>
-
-<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
