--- a/main.html
+++ b/main.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Quiz</title>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <title>Quiz App</title>
 </head>
 <body>
+
+  <h1>Multiple Choice Quiz</h1>
 
   <div id="questions"></div>
 
