--- a/main.html
+++ b/main.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Quiz App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <h1>Multiple Choice Quiz</h1>
 
+  <!-- Questions container -->
   <div id="questions"></div>
 
+  <!-- Submit button -->
   <button id="submit">Submit</button>
 
+  <!-- Score display -->
   <div id="score"></div>
 
-  <script src="script.js"></script>
-</body>
-</html>
+ 
