--- a/main.html
+++ b/main.html
@@ -9,13 +9,15 @@
 
   <h1>Multiple Choice Quiz</h1>
 
-  <!-- Questions container -->
+  <!-- Questions Container -->
   <div id="questions"></div>
 
-  <!-- Submit button -->
+  <!-- Submit Button -->
   <button id="submit">Submit</button>
 
-  <!-- Score display -->
+  <!-- Score Display -->
   <div id="score"></div>
 
- 
+  <script src="script.js"></script>
+</body>
+</html>
